[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvcache-hit-rate"
version = "0.1.0"
description = "KV cache trace generation and hit-rate simulation tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.40.0",
  "sentencepiece>=0.2.0",
]

[project.scripts]
kvcache-hit-rate = "plugins.kv_cache_hit_rate_plugin:main"
kvcache-simulator = "kvcache_sim.cli:main"

[tool.setuptools]
packages = ["plugins", "kvcache_sim", "kvcache_sim.resources"]

[tool.setuptools.package-dir]
kvcache_sim = "packages/kvcache-simulator/src/kvcache_sim"
"kvcache_sim.resources" = "packages/kvcache-simulator/src/kvcache_sim/resources"

[tool.setuptools.package-data]
"kvcache_sim.resources" = ["models.yaml", "kv-cache-lab-native-sim.cc"]
